--- a/src/main/resources/config_dev.conf
+++ b/src/main/resources/config_dev.conf
@@ -1,28 +1,7 @@
-mysql_offset {
+mysql {
    url = "jdbc:mysql://127.0.0.1:3306/test"
    userName = root
    password = root
-}
-
-consumer {
-  topic = "binlog_beeper_tf_trans_event-1"
-  zookeeper = "localhost:2181"
-  bootstrap_servers = "localhost:9092"
-  group_id = "consumer-binlog_beeper_tf_trans_event-1"
-  offset_store = true
-  offset_reset = "latest"
-}
-
-spark_streaming {
-  batch_duration = 10 # 10s
-  spark_master = "local[3]"
-  spark_checkpoint = "checkpoint"
-  checkpoint_dir = "BeepertfTransEvent"
-  save_hdfs = false
-}
-
-hadoop {
-  hdfs = "hdfs://localhost:9000/kafka"
 }
 
 redis {
@@ -33,5 +12,28 @@ redis {
     testOnBorrow=true
   }
   sentinel_master = mymaster
-  sentinel_host = "127.0.0.1:63791,127.0.0.1:63792"
+  sentinel_host = "127.0.0.1:63791"
+}
+
+beeper_trans_event {
+    consumer {
+      topic = "binlog_beeper_tf_trans_event-1"
+      zookeeper = "127.0.0.1:2181"
+      bootstrap_servers = "127.0.0.1:9092"
+      group_id = "consumer-binlog_beeper_tf_trans_event-6"
+      offset_store = true
+      offset_reset = "latest"
+    }
+
+    streaming {
+      batch_duration = 10 # 10s
+      spark_master = "local[3]"
+      spark_checkpoint = "checkpoint"
+      checkpoint_dir = "BeepertfTransEvent"
+      save_hdfs = false
+    }
+
+    hadoop {
+      hdfs = "hdfs://localhost:9000/kafka"
+    }
 }
