--- a/src/main/resources/config_pro.conf
+++ b/src/main/resources/config_pro.conf
@@ -1,27 +1,7 @@
-mysql_offset {
+mysql {
    url = "jdbc:mysql://localhost:3306/test"
    userName = root
    password = root
-}
-
-consumer {
-  topic = "binlog_beeper_trans_event_yn_trans_event"
-  zookeeper = "kafka125.yn.com:2181,kafka126.yn.com:2181,kafka127.yn.com:2181"
-  bootstrap_servers = "kafka125.yn.com:9092,kafka126.yn.com:9092,kafka127.yn.com:9092"
-  group_id = "consumer-binlog_beeper_trans_event_yn_trans_event"
-  offset_store = true
-  offset_reset = "earliest"
-}
-
-spark_streaming {
-  batch_duration = 600 # 10min
-  spark_checkpoint = "hdfs://hadoop-cluster/spark-streaming/checkpoint"
-  checkpoint_dir = "binlog_beeper_trans_event_yn_trans_event"
-  save_hdfs = false
-}
-
-hadoop {
-  hdfs = "hdfs://hadoop-cluster/kafka"
 }
 
 redis {
@@ -34,3 +14,29 @@ redis {
   sentinel_master = mymaster
   sentinel_host = "192.168.0.30:26379,192.168.0.31:26379"
 }
+
+
+beeper_trans_event {
+  consumer {
+    topic = "binlog_beeper_trans_event_yn_trans_event"
+    zookeeper = "kafka125.yn.com:2181,kafka126.yn.com:2181,kafka127.yn.com:2181"
+    bootstrap_servers = "kafka125.yn.com:9092,kafka126.yn.com:9092,kafka127.yn.com:9092"
+    group_id = "consumer-BeepertfTransEvent-binlog_beeper_trans_event_yn_trans_event" # consumer + 类名 + topic 名称
+    offset_store = true
+    offset_reset = "earliest"
+  }
+
+  streaming {
+    batch_duration = 600 # 10min
+    spark_checkpoint = "hdfs://hadoop-cluster/spark-streaming/checkpoint"
+    checkpoint_dir = "BeepertfTransEvent_binlog_beeper_trans_event_yn_trans_event"
+    save_hdfs = false
+  }
+
+  hadoop {
+    hdfs = "hdfs://hadoop-cluster/kafka/BeepertfTransEvent"
+  }
+}
+
+
+
