--- a/src/main/resources/config_pro.conf
+++ b/src/main/resources/config_pro.conf
@@ -1,7 +1,7 @@
 mysql {
-   url = "jdbc:mysql://localhost:3306/test"
-   userName = root
-   password = root
+   url = "jdbc:mysql://192.168.0.85:3306/beeper2_bi"
+   userName = bi
+   password = beeper_bi_Production
 }
 
 redis {
